# fastapi-htmx-template

./: Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json
apps/web/: main.py  pyproject.toml
apps/web/routers/: api.py  pages.py
apps/web/templates/: base.html
apps/web/templates/pages/: index.html
apps/web/templates/partials/: list_users.html
notebooks/: example.ipynb
