[project]
name = "fastapi-htmx-template"
version = "1.0.0"
description = "Template for FastAPI + HTMX"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
  "apps/web",
  "packages/shared",
]

[tool.ruff]
line-length = 120
exclude = [
  ".git",
  ".venv",
  "__pycache__",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
