[project]
name = "web"
version = "1.0.0"
description = "FastAPI application"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "jinja2>=3.1.6",
  "shared",
  "uvicorn>=0.40.0",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.setuptools.packages.find]
include = ["routers", "templates"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
